# orangepi3b_cross_compile

./: CMakeLists.txt  Makefile  README.md  aarch64-toolchain.cmake
build_x64/: CMakeCache.txt  Makefile  cmake_install.cmake
build_x64/src/opencv_test/: Makefile  cmake_install.cmake  opencv_test
env/: orangePI_env.md  x64_ubuntu_env.md
src/opencv_test/: CMakeLists.txt  main.cpp
